use String:isBlank